--- a/index.html
+++ b/index.html
@@ -45,20 +45,26 @@
         }).done(function(ships_data) {
           // Got the current Ships in database. Now get the Positions list for
           // each one of the ships.
-          for (i = 0; i < ships_data.length; i++) {
+          //console.log(ships_data.results[0].imo)
+          for (i = 0; i < ships_data.results.length; i++) {
+             //console.log(ships_data.results[i].imo)
+             // currentShip = ships_data.results[i].imo
             (function (currentShip) {
               $.ajax({
-                url: 'http://localhost:8000/api/positions.json&imo=' + currentShip.imo,
+<!--                url: 'http://localhost:8000/api/positions.json&imo=' + currentShip.imo,-->
+                url: 'http://localhost:8000/api/positions.json?imo=' + ships_data.results[i].imo,
                 dataType: 'json'
               }).done(function(positions_data) {
                 // Add current position marker (1st position in the list).
                 var latest = positions_data[0];
+                //console.log(positions_data)
                 var marker = L.marker([latest.latitude, latest.longitude]).addTo(map);        
                 marker.bindPopup('<b>' + currentShip.name + '</b><br/>IMO: ' + currentShip.imo).openPopup();
 
                 // Next positions are the trail.
                 for (p = 1; p < positions_data.length; p++) {
                   position = positions_data[p];
+                  console.log(position)
 
                   var circle = L.circle([position.latitude, position.longitude], {
                     color: 'red',
